kubernetes/apps/media/crosswatch/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crosswatch
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - crosswatch.blackcats.cc
  rules:
    - backendRefs:
        - name: crosswatch
          port: 8787
